# cloudgamestream

./: .gitignore  .gitmodules  LICENSE  README.md  Setup.ps1
Patch_Src/: GFEPatch.sln
Patch_Src/GFEPatch/: GFEPatch.cpp  GFEPatch.vcxproj  GFEPatch.vcxproj.filters
ResFix_src/: CMakeLists.txt  build.bat  clean_reconfigure.bat  main.cpp
ResFix_src/cmake/: FindNVAPI.cmake
ResFix_src/nvapi/: nvapi_info.txt
ResolutionFix_Src/: ResolutionFix.sln
ResolutionFix_Src/ResolutionFix/: ResolutionFix.cpp  ResolutionFix.vcxproj  ResolutionFix.vcxproj.filters
Steps/: 1_Install_Requirements.ps1  1_opt_Install_Drivers.ps1  1_opt_Install_VBCABLE.ps1  2_Apply_Fixes.ps1  2_Disable_Other_GPUs.ps1  2_Patch_GFE.ps1  3_Apply_Fixes.ps1  3_Disable_Other_GPUs.ps1  4_Apply_Fixes.ps1  Patcher.ps1
